--- a/Multiple_Linear_Regression.ipynb
+++ b/Multiple_Linear_Regression.ipynb
@@ -1876,8 +1876,8 @@
         "* The scatter plots for each advertising platform do not show a strong linear relationship with the product sold. This assumption is violated. Despite this, we include all the independent variables since they increase the model's performance.\n",
         "* The residuals are approximately normally distributed, as shown in the histogram and supported by the QQ-plot, which plots appear to form a diagonal line.\n",
         "* Each advertising platform in the dataset is independent from one another, meaning that the Independent Observations assumption is met.\n",
-        "* The variation of the residuals have the same scatter. It met the homoscedaticity assumption.\n",
-        "* The VIF for each variable shows different values, which indicates that there's no relationship between the variables. Thus, the no multicolinearity assumption is not violated.\n",
+        "* The variation of the residuals have the same scatter. It met the homoscedasticity assumption.\n",
+        "* The VIF for each variable shows different values, which indicates that there's no relationship between the variables. Thus, the no multicollinearity assumption is not violated.\n",
         "\n",
         "To asses and decide whether the model performs well or not, we need to evaluate the model's performance."
       ],
@@ -1980,7 +1980,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The model evaluation show that the evaluation metrics are relatively small compared to the mean. This indicates that model performs well, since we applied ridge regularization to the model."
+        "The model evaluation shows that the evaluation metrics are relatively small compared to the mean. This indicates that model performs well, since we applied ridge regularization to the model."
       ],
       "metadata": {
         "id": "_hc9TwPZpQHo"
