--- a/Multiple_Linear_Regression.ipynb
+++ b/Multiple_Linear_Regression.ipynb
@@ -988,7 +988,7 @@
       "source": [
         "## **EDA Interpretation**\n",
         "Each advertising platform's cost doesn't seem to have a strong linear relationship with the product sold. However, each platform shows a postive correlation between the cost and the product sold.\n",
-        "This makes sense, because the higher the cost spent which typically means better-quality advertising (e.g. endorsment by popular artist/influencer), the higher the product sold.  Although, it's not neccesarily in a consistent trend."
+        "This makes sense, because the higher the cost spent which typically means better-quality advertising (e.g. endorsment by popular artist/influencer), the higher the product sold.  Although, it's not necessarily in a consistent trend."
       ],
       "metadata": {
         "id": "s58wli5VHj4f"
